--- a/css/style.css
+++ b/css/style.css
@@ -341,7 +341,7 @@ header img {
 }
 
 /* Product Images */
-.img-1 { background-image: url('/css/imaage/aippod\ pro\ 2.jpg'); }
+.img-1 { background-image: url('/css/imaage/aippod pro 2.jpg'); }
 .img-2 { background-image: url('/css/imaage/airpod4.jpg'); }
 .img-3 { background-image: url('../imaage/airpods_pro_max.jpg'); }
 .img-4 { background-image: url('../imaage/cologne.jpg'); }
