--- a/css/style.css
+++ b/css/style.css
@@ -91,10 +91,11 @@ header img {
 
 /* Container */
 .container {
-  max-width: 1200px;
-  margin: 0 auto;
+  max-width: 1300px;
+  margin:  auto;
   padding: 10px;
-  display: none; 
+  display: none;
+  padding: 30px 15px; 
   border-radius: 12px;
   box-shadow: 0 4px 12px rgba(0,0,0,0.1);
 }
@@ -322,6 +323,9 @@ header img {
     flex-direction: column;
     align-items: center;
   }
+  body{
+    padding: 0;
+  }
 
   .card {
     width: 95%;
@@ -351,6 +355,8 @@ header img {
     font-size: 16px;
   }
 }
+
+
 
 /* Product Images */
 .img-1 { background-image: url('/css/imaage/airpodpro2.jpg'); }
